--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
         "webpack-stream": "^7.0.0"
     },
     "type": "module",
-    "private": true
+    "private": true,
+    "dependencies": {
+        "swiper": "^8.3.1"
+    }
 }
