--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "private": true,
     "dependencies": {
         "nouislider": "^15.6.0",
-        "swiper": "^8.3.1"
+        "swiper": "^8.3.1",
+        "wnumb": "^1.2.0"
     }
 }
